--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <!-- Masthead Subheading -->
       <!-- Edit your graduation year and major in the line of code below -->
-      <p class="masthead-subheading font-weight-light mb-0">Global Technology Sourcing Professional</p>
+      <p class="masthead-subheading font-weight-light mb-0">Global Technology Business Leader</p>
       <!-- Add your resume by editing the name of your file -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="Ranjan Thomas Profile.pdf" target="_blank">
