--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
   <!-- Portfolio Modals -->
 
-  <!-- Portfolio Modal 1 TOYOTA-->
+  <!-- Portfolio Modal 1-->
   <!-- This is where you change the content of the projects in the portfolio section -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
@@ -313,7 +313,7 @@
                 <!-- Portfolio Modal - Image -->
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/Toyota.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><p style="text-align: left">• Engage, negotiate and contract agreements for the Chief Data Office (CDO) enabling machine learning, data insights, advanced analytics, cloud strategy and data science
+                <p class="mb-5"><p style="text-align: left">• Engage, negotiate, and structure agreements for the Chief Data Office (CDO) enabling machine learning, data insights, advanced analytics, cloud strategy and data science
 <br><br> • Interpret complex policies, contractual or regulatory procurement requirements and develop/manage effective governance structures
 <br><br> • Work proactively with key CDO stakeholders to understand strategic sourcing requirements and identify/engage select suppliers to deliver optimal sourcing results.</p></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -354,8 +354,8 @@
                 <!-- Portfolio Modal - Image -->
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/AT&T.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><p style="text-align: left">• Developed and executed business strategy including portfolio lifecycle management, go to market, pricing and vertical market strategies to acquire new 4G LTE customers and grow existing customer base.
-<br><br> • Championed and delivered software-based networking solutions that enable global mobile service providers to deliver IP based VoLTE, RCS and VoWi-Fi solutions.
+                <p class="mb-5"><p style="text-align: left">• Developed and executed business strategies including portfolio lifecycle management, go to market, pricing and positioning to acquire new 4G LTE customers and grow existing customer base.
+<br><br> • Championed and delivered software-based networking solutions that enabled global mobile service providers to deliver IP based VoLTE, RCS and VoWi-Fi solutions.
 <br><br> • Worked collaboratively with Sales, Support, Services and Marketing teams on the development and execution of sales, channel and services strategies.</p></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
@@ -437,7 +437,7 @@
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/SWE.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"><p style="text-align: left">• Transitioned complete Outsourced Design Services from US to India. Established local leadership team   managing annual spend of $400M+ across global suppliers.
-<br><br> • Developed and executed CDMA Product Marketing business strategy including portfolio lifecycle management, go-to-market strategies, pricing, and value proposition to acquire new customers and grow existing customer base including Verizon, Sprint, BMC, Telstra, Pelephone, Telus, Reliance, Tata, Telefonica, and Telstra. Generated over $1B+ in revenue.
+<br><br> • Developed and executed CDMA Product Marketing business strategies including portfolio lifecycle management, go-to-market strategies, pricing, and value proposition to acquire new customers and grow existing customer base. Key providers included Verizon, Sprint, BMC, Telstra, Pelephone, Telus, Reliance, Tata, Telefonica, and Telstra. Generated over $1B+ in revenue.
 <br><br> • Supported Sales, Product Line Management and commercial positioning of new hardware, software, services and OEM to maximize revenue opportunities and reduce costs.
 <br><br> • Supported Asia South Pacific, Japan and Greater China Sales--Account teams in bid response, project coordination, sales quotes, and analysis.
 <br><br> • Designed, developed and presented GSM technology and services roadmap to Indian operators.</p></p>
